tests/keyvalue/keyvalue.exp
Error ---------------------------------------------------------- keyvalue.js:5:6

Error: keyvalue.js:5
  5:     (x[""]: number);
          ^^^^^ Cannot cast `x[""]` to number because string [1] is incompatible with number [2].
  References:
    4:   function(x: { [key: number]: string }) {
                                      ^^^^^^ [1]: string
    5:     (x[""]: number);
                   ^^^^^^ [2]: number

Error ---------------------------------------------------------- keyvalue.js:5:6

Error: keyvalue.js:5
  5:     (x[""]: number);
          ^^^^^ empty string [1] is incompatible with number [2].
  References:
    5:     (x[""]: number);
            ^^^^^ [1]: empty string
    4:   function(x: { [key: number]: string }) {
                             ^^^^^^ [2]: number


Found 2 errors
